--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "sample_demo_cucumber",
+  "name": "sharajman_project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test-run": "cucumber-js test -p test_runner"
+    "test1": "npx cucumber-js test",
+    "test": "cucumber-js test -p test_runner",
+    "allure:generate": "npx allure generate ./allure-results --clean",
+    "allure:open": "allure open allure-report",
+    "all": "npm test && npm run allure:generate && npm run allure:open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cucumber/cucumber": "^10.4.0",
     "@playwright/test": "^1.42.1",
-    "@types/node": "^20.11.25",
-    "ejs": "^3.1.9"
-  },
-  "dependencies": {
-    "@cucumber/cucumber": "^10.3.1",
+    "@types/node": "^20.11.6",
     "cucumber-html-reporter": "^7.1.1",
+    "ejs": "^3.1.9",
     "fs": "^0.0.1-security",
     "pdf-parse": "^1.1.1",
-    "playwright": "^1.42.1"
+    "playwright": "^1.43.0"
   }
 }
